2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/searchoptions.png:
	* MonoDevelop.SourceEditor/searchoptions.svg:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Added
	  search options icon.

2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/PinnedWatchWidget.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Worked
	  on search & replace widget.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Remove
	  dead code.

2010-02-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: fixed
	  flickering in inform label update.

2010-02-12  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/GotoLineNumberWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	  Overworked the search & replace widget.

2010-02-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	  re-implemented intptr constructor.

2010-02-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed 'Bug
	  577848 - MissingIntPtrCtorException appears randomly'.

2010-02-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Added scroll
	  to caret call for all folding commands to fix "Bug 577933 -
	  Text editor cannot be scrolled and no text is in view".
