@@ -1,3 +1,9 @@
+2010-02-16  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
+	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Fixed
+	  search & replace widget flickering problem.
+
 2010-02-15  Mike Krüger  <mkrueger@novell.com>
 
 	* Makefile.am:
